--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -283,9 +283,15 @@
             <setting name="TOUEmulation" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="TOUNode" serializeAs="String">
+			<setting name="ImpulseEmulation" serializeAs="String">
+				<value>True</value>
+			</setting>
+			<setting name="TOUNode" serializeAs="String">
                 <value>11</value>
             </setting>
+			<setting name="ImpulseNode" serializeAs="String">
+				<value>101</value>
+			</setting>
             <setting name="IsWriteSafetyRegister" serializeAs="String">
                 <value>True</value>
             </setting>
