--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -17,7 +17,7 @@
                 <value>False</value>
             </setting>
             <setting name="CommIsVisible" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="ExitButtonIsVisible" serializeAs="String">
                 <value>False</value>
