Изменил логи с Impulse на SSRTU, Отрефакторил код с Impulse на SSRTU, Добавил вызов очистки alarm если сработала система безопасности.

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -283,13 +283,13 @@
             <setting name="TOUEmulation" serializeAs="String">
                 <value>True</value>
             </setting>
-			<setting name="ImpulseEmulation" serializeAs="String">
+			<setting name="SSRTUEmulation" serializeAs="String">
 				<value>True</value>
 			</setting>
 			<setting name="TOUNode" serializeAs="String">
                 <value>11</value>
             </setting>
-			<setting name="ImpulseNode" serializeAs="String">
+			<setting name="SSRTUNode" serializeAs="String">
 				<value>101</value>
 			</setting>
             <setting name="IsWriteSafetyRegister" serializeAs="String">
