настроил проект под сборку x86, отключил синхронизацию в конфигах.

--- a/SCME.Service/app.config
+++ b/SCME.Service/app.config
@@ -111,7 +111,7 @@
         <value>True</value>
       </setting>
       <setting name="DisableResultDB" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DisableLogDB" serializeAs="String">
         <value>False</value>
