--- a/SCME.UI.SCTU/App.config
+++ b/SCME.UI.SCTU/App.config
@@ -1,16 +1,12 @@
 <?xml version="1.0"?>
-
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings"
-                  type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="SCME.UI.Properties.Settings"
-               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-               requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SCME.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="SCME.UI.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-      <section name="SCME.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToApplication" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="SCME.UI.UserSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+      <section name="SCME.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToApplication" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   
@@ -18,7 +14,7 @@
     <behaviors>
      <endpointBehaviors>
         <behavior name="DefaultClientEndpointBehavior">
-          <callbackDebug includeExceptionDetailInFaults="true" />
+          <callbackDebug includeExceptionDetailInFaults="true"/>
           <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
         </behavior>
       </endpointBehaviors>
@@ -28,35 +24,27 @@
       <netTcpBinding>
         <binding name="DefaultTcpBinding" receiveTimeout="00:01:30" sendTimeout="00:01:30" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" maxBufferSize="2147483647" maxConnections="100">
           <security mode="None">
-            <transport clientCredentialType="None" />
-            <message clientCredentialType="None" />
+            <transport clientCredentialType="None"/>
+            <message clientCredentialType="None"/>
           </security>
         </binding>
       </netTcpBinding>
     </bindings>
     <protocolMapping>
-      <remove scheme="net.tcp" />
-      <add scheme="net.tcp" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" /> 
+      <remove scheme="net.tcp"/>
+      <add scheme="net.tcp" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"/> 
     </protocolMapping>
 
     <client>
-      <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService"
-                behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-                contract="SCME.Types.IExternalControl" name="SCME.Service.ExternalControl" />
-      <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService"
-                behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-                contract="SCME.Types.IDatabaseCommunicationService" name="SCME.Service.DatabaseServer" />
-      <endpoint address="net.tcp://127.0.0.1:803/SCME/SCME.ProfileService.MME"
-                behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-                contract="SCME.Types.IProfileProviderService" name="SCME.ProfileService" />
-      <endpoint address="net.tcp://127.0.0.1:805/SCME/SCME.IO.CentralDatabaseService"
-                behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding"
-                contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService" />
+      <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IExternalControl" name="SCME.Service.ExternalControl"/>
+      <endpoint address="net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IDatabaseCommunicationService" name="SCME.Service.DatabaseServer"/>
+      <endpoint address="net.tcp://127.0.0.1:803/SCME/SCME.ProfileService.MME" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.IProfileProviderService" name="SCME.ProfileService"/>
+      <endpoint address="net.tcp://127.0.0.1:805/SCME/SCME.IO.CentralDatabaseService" behaviorConfiguration="DefaultClientEndpointBehavior" binding="netTcpBinding" bindingConfiguration="DefaultTcpBinding" contract="SCME.Types.DatabaseServer.ICentralDatabaseService" name="SCME.CentralDatabaseService"/>
     </client>
     
   </system.serviceModel>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <applicationSettings>
     <SCME.UI.Properties.Settings>
