--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <SCME.UIServiceConfig.Properties.Settings>
             <setting name="GateIsVisible" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="SLIsVisible" serializeAs="String">
                 <value>True</value>
@@ -173,7 +173,7 @@
                 <value>True</value>
             </setting>
             <setting name="IsLocal" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="DisableLogDB" serializeAs="String">
                 <value>False</value>
