Добавил логику, чтобы Gate использовал IH если измерение по ГОСТу

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -310,6 +310,9 @@
             <setting name="CentralDatabase" serializeAs="String" >
                 <Value>net.tcp://127.0.0.1:730/SCME/CentralDatabase</Value>
             </setting>
+            <setting name="IHGOST" serializeAs="String">
+                <value>True</value>
+            </setting>
         </SCME.UIServiceConfig.Properties.Settings>
     </applicationSettings>
 </configuration>
