IHGOST по умолчанию false

--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -10,8 +10,8 @@
   "HostUrl": "http://127.0.0.1:731",
   "UpdateDataConfig": {
     "DebugParameter": "2",
-    "DataPathRoot": "e:\\data",
-    "ScmeAgentFolderName": "SCME.Agent",
+    "DataPathRoot": "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software develop\\SCME.Agent\\bin\\Debug\\",
+    "ScmeAgentFolderName": "netcoreapp3.1",
     "ScmeAgentExeName": "SCME.Agent.exe",
     "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
     "ScmeUIExeName": "UI\\SCME.UI.exe",
