--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -46,13 +46,13 @@
                 <value>False</value>
             </setting>
             <setting name="DBPassword" serializeAs="String">
-                <value>qwerty_123</value>
+                <value>Hpl1520</value>
             </setting>
             <setting name="LogPathTemplate" serializeAs="String">
                 <value>Logs\DatabaseServer_{0}.log</value>
             </setting>
             <setting name="DbPath" serializeAs="String">
-                <value>IVAN-PC\SQLEXPRESS</value>
+                <value>tcp:192.168.0.134, 1444</value>
             </setting>
             <setting name="DBUser" serializeAs="String">
                 <value>sa</value>
