--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="SCME.UIServiceConfig.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
     </configSections>
     <applicationSettings>
         <SCME.UIServiceConfig.Properties.Settings>
@@ -311,8 +308,11 @@
                 <Value>net.tcp://127.0.0.1:730/SCME/CentralDatabase</Value>
             </setting>
             <setting name="IHGOST" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
+			<setting name="ClampingSystemType" serializeAs="String">
+				<value>kN100</value>
+			</setting>
         </SCME.UIServiceConfig.Properties.Settings>
     </applicationSettings>
 </configuration>
