--- a/SCME.UIServiceConfig/Properties/Settings.settings
+++ b/SCME.UIServiceConfig/Properties/Settings.settings
@@ -314,5 +314,8 @@
     <Setting Name="IHGOST" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ClampingSystemType" Type="SCME.Types.Clamping.ClampingSystemType" Scope="Application">
+      <Value Profile="(Default)">kN100</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
