--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -27,6 +27,16 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SCME.Types\SCME.Types.csproj" />
+    <ProjectReference Include="..\SCME.UIServiceConfig\SCME.UIServiceConfig.csproj" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
  
