--- a/SCME.Service/SCME.SERVICE.csproj
+++ b/SCME.Service/SCME.SERVICE.csproj
@@ -88,6 +88,7 @@
     </Reference>
     <Reference Include="System.IdentityModel" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Security" />
@@ -137,6 +138,7 @@
     <Compile Include="IO\IOGateway.cs" />
     <Compile Include="LogicContainer.cs" />
     <Compile Include="IO\IOStLs.cs" />
+    <Compile Include="MonitoringSender.cs" />
     <Compile Include="MyErrorHandler.cs" />
     <Compile Include="MyServiceBehavior.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
