--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System.Configuration.ConfigurationManager, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" >
+            <section name="SCME.UIServiceConfig.Properties.Settings" type="System.Configuration.ClientSettingsSection, System.Configuration.ConfigurationManager, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <applicationSettings>
         <SCME.UIServiceConfig.Properties.Settings>
@@ -312,6 +315,9 @@
             </setting>
 			<setting name="ClampingSystemType" serializeAs="String">
 				<value>kN100</value>
+			</setting>
+			<setting name="MEFAUri" serializeAs="String">
+				<value>http://127.0.0.1:740</value>
 			</setting>
         </SCME.UIServiceConfig.Properties.Settings>
     </applicationSettings>
