--- a/SCME.MEFADB/SCME.MEFADB.csproj
+++ b/SCME.MEFADB/SCME.MEFADB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -6,19 +6,11 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8" />
     </ItemGroup>
 
     <ItemGroup>
       <None Remove="EFMigrateConnectionString.txt" />
     </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Tables" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\SCME.MEFADB\SCME.MEFADB.csproj" />
-    </ItemGroup>
-
 
 </Project>
