--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -316,6 +316,9 @@
             <setting name="CentralDatabase" serializeAs="String" >
                 <Value>net.tcp://127.0.0.1:730/SCME/CentralDatabase</Value>
             </setting>
-        </SCME.UIServiceConfig.Properties.Settings>
+			<setting name="AttestationIsVisibly" serializeAs="String" >
+				<Value>True</Value>
+			</setting>
+		</SCME.UIServiceConfig.Properties.Settings>
     </applicationSettings>
 </configuration>
