--- a/SCME.UIServiceConfig/Properties/Settings.settings
+++ b/SCME.UIServiceConfig/Properties/Settings.settings
@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SCME.UIServiceConfig.Properties" GeneratedClassName="Settings1">
+﻿<?xml version='1.0' encoding='utf-8'?>
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="SCME.UIServiceConfig.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="GateIsVisible" Type="System.Boolean" Scope="Application">
@@ -281,15 +281,15 @@
     <Setting Name="TOUEmulation" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-	<Setting Name="SSRTUEmulation" Type="System.Boolean" Scope="Application">
-		  <Value Profile="(Default)">True</Value>
-	  </Setting>
+    <Setting Name="SSRTUEmulation" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
     <Setting Name="TOUNode" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">11</Value>
     </Setting>
-	  <Setting Name="SSRTUNode" Type="System.Int32" Scope="Application">
-		  <Value Profile="(Default)">101</Value>
-	  </Setting>
+    <Setting Name="SSRTUNode" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">101</Value>
+    </Setting>
     <Setting Name="IsWriteSafetyRegister" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -302,20 +302,23 @@
     <Setting Name="DebugUpdate" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="ControlService" Type="System.String" Scope="User">
+    <Setting Name="ControlService" Type="System.String" Scope="Application">
       <Value Profile="(Default)">net.tcp://127.0.0.1:800/SCME/SCME.IO.ControlService</Value>
     </Setting>
-    <Setting Name="DatabaseService" Type="System.String" Scope="User">
+    <Setting Name="DatabaseService" Type="System.String" Scope="Application">
       <Value Profile="(Default)">net.tcp://127.0.0.1:800/SCME/SCME.IO.DatabaseService</Value>
     </Setting>
-    <Setting Name="LocalDatabase" Type="System.String" Scope="User">
+    <Setting Name="LocalDatabase" Type="System.String" Scope="Application">
       <Value Profile="(Default)">net.tcp://127.0.0.1:800/SCME/LocalDatabase</Value>
     </Setting>
-    <Setting Name="CentralDatabaseService" Type="System.String" Scope="User">
+    <Setting Name="CentralDatabaseService" Type="System.String" Scope="Application">
       <Value Profile="(Default)">net.tcp://127.0.0.1:730/SCME/SCME.IO.CentralDatabaseService</Value>
     </Setting>
-    <Setting Name="CentralDatabase" Type="System.String" Scope="User">
+    <Setting Name="CentralDatabase" Type="System.String" Scope="Application">
       <Value Profile="(Default)">net.tcp://127.0.0.1:730/SCME/CentralDatabase</Value>
+    </Setting>
+    <Setting Name="AttestationIsVisibly" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
