UI правки, Добавил удаление профиля Добавил списки и скроллбары Изменил вывод параметров и норм(только значащие цифры)

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -113,7 +113,7 @@
                 <value>ru-RU</value>
             </setting>
             <setting name="SpecialMeasureForUse" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="OperatorBuildModeIsEnabled" serializeAs="String">
                 <value>False</value>
@@ -299,7 +299,7 @@
                 <value>False</value>
             </setting>
             <setting name="MMECode" serializeAs="String">
-                <value>MME010</value>
+                <value>MME009</value>
             </setting>
             <setting name="DebugUpdate" serializeAs="String">
                 <value>True</value>
