--- a/SCME.UI/SCME.UI.csproj
+++ b/SCME.UI/SCME.UI.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <None Remove="App.ico" />
     <None Remove="FodyWeavers.xml" />
+    <None Remove="Resources\AlarmImage.png" />
     <None Remove="AccountsConfig\**" />
   </ItemGroup>
 
@@ -71,6 +72,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Resource>
+    <Resource Include="Resources\AlarmImage.png" />
   </ItemGroup>
 
   <ItemGroup>
