--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -319,6 +319,9 @@
 			<setting name="AttestationIsVisibly" serializeAs="String" >
 				<Value>True</Value>
 			</setting>
+			<setting name="ReportFolder" serializeAs="String">
+				<Value>D:\</Value>
+			</setting>
 		</SCME.UIServiceConfig.Properties.Settings>
     </applicationSettings>
 </configuration>
