--- a/SCME.UIServiceConfig/Properties/Settings.settings
+++ b/SCME.UIServiceConfig/Properties/Settings.settings
@@ -320,5 +320,8 @@
     <Setting Name="AttestationIsVisibly" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ReportFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
