--- a/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
+++ b/SCME.WpfControlLibrary/SCME.WpfControlLibrary.csproj
@@ -63,6 +63,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Update="DataTemplates\TestParameters\AuxiliaryPowerTemplate.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="DataTemplates\TestParameters\InputOptions.xaml">
       <SubType>Designer</SubType>
     </Page>
