--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -48,7 +48,7 @@
     <userSettings>
         <SCME.ProfileBuilder.Properties.Settings>
             <setting name="LastSelectedMMECode" serializeAs="String">
-                <value>MME008</value>
+                <value>A</value>
             </setting>
         </SCME.ProfileBuilder.Properties.Settings>
     </userSettings>
