--- a/SCME.UIServiceConfig/SCME.UIServiceConfig.csproj
+++ b/SCME.UIServiceConfig/SCME.UIServiceConfig.csproj
@@ -1,22 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFrameworks>netcoreapp3.1;net472</TargetFrameworks>
+    <AssemblyVersion>3.12.0.0</AssemblyVersion>
+    <Version>3.12</Version>
+    <Company />
+    <Product />
+    <Description>Service and UI startup configuration file for SCME projects</Description>
+    <Copyright>Copyright © Proton-Electrotex JSC 2014</Copyright>
+    <FileVersion>3.12.0.0</FileVersion>
+    <Authors>Proton-Electrotex</Authors>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32bit>false</Prefer32bit>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\SCME.TYPES\SCME.Types.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="Properties\Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
@@ -24,17 +27,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <None Update="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-
   <ItemGroup>
     <None Remove="App.config" />
     <Content Include="App.config" />
   </ItemGroup>
-
 </Project>
