--- a/SCME.UpdateServer/SCME.UpdateServer.csproj
+++ b/SCME.UpdateServer/SCME.UpdateServer.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyVersion>3.12.0.0</AssemblyVersion>
+    <Version>3.12</Version>
+    <Authors>Proton-Electrotex</Authors>
+    <Description>Update application for SCME projects</Description>
+    <Copyright>Copyright © Proton-Electrotex JSC 2014</Copyright>
+    <FileVersion>3.12.0.0</FileVersion>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <Prefer32bit>false</Prefer32bit>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
-
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Properties\launchSettings.json" />
   </ItemGroup>
-
-
 </Project>
