--- a/SCME.UIServiceConfig/Properties/Settings.settings
+++ b/SCME.UIServiceConfig/Properties/Settings.settings
@@ -323,5 +323,8 @@
     <Setting Name="TempIsVisible" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="VGNTIsVisible" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
