Catcher'ы исключений Agent и UpdateServer

--- a/SCME.DatabaseServer/App.config
+++ b/SCME.DatabaseServer/App.config
@@ -55,10 +55,10 @@
                 <value>SCME_ResultsDB</value>
             </setting>
             <setting name="DBPassword" serializeAs="String">
-                <value>Hpl1520</value>
+                <value>Ufkfrnbrf6084</value>
             </setting>
             <setting name="DbPath" serializeAs="String">
-                <value>tcp:192.168.0.134, 1444</value>
+                <value>192.168.128.4</value>
             </setting>
         </SCME.DatabaseServer.Properties.Settings>
     </applicationSettings>
