--- a/SCME.ProfileBuilder/App.config
+++ b/SCME.ProfileBuilder/App.config
@@ -17,7 +17,7 @@
                 <value>ru-RU</value>
             </setting>
             <setting name="MSSQLServer" serializeAs="String">
-                <value>IVAN-PC\SQLEXPRESS</value>
+                <value>192.168.128.4</value>
             </setting>
             <setting name="MSSQLIntegratedSecurity" serializeAs="String">
                 <value>False</value>
@@ -32,10 +32,10 @@
                 <value>True</value>
             </setting>
             <setting name="MSSQLPassword" serializeAs="String">
-                <value>qwerty_123</value>
+                <value>Ufkfrnbrf6084</value>
             </setting>
             <setting name="SQLiteFileName" serializeAs="String">
-                <value>C:\Users\Ivan\Desktop\Работа\mme_software_TS05\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</value>
+                <value>C:\Visual Studio\mme_software\Debug\UIServiceData\SCME_ResultsDB_Local.sqlite</value>
             </setting>
             <setting name="TypeDb" serializeAs="String">
                 <value>MSSQL</value>
