--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -10,14 +10,14 @@
   "HostUrl": "http://127.0.0.1:731",
   "UpdateDataConfig": {
     "DebugParameter": "2",
-    "DataPathRoot": "C:\\Users\\Ivan\\Desktop\\Работа\\mme_software develop\\SCME.Agent\\bin\\Debug\\",
-    "ScmeAgentFolderName": "netcoreapp3.1",
+    "DataPathRoot": "C:\\SCME.ServerSofware",
+    "ScmeAgentFolderName": "Agent",
     "ScmeAgentExeName": "SCME.Agent.exe",
-    "ScmeCommonConfigName": "SCME.UIServiceConfig.dll.config",
-    "ScmeUIExeName": "UI\\SCME.UI.exe",
+    "ScmeCommonConfigName": "UIService\\SCME.UIServiceConfig.dll.config",
+    "ScmeUIExeName": "UIService\\UI\\SCME.UI.exe",
     "MmeParameters": [
       {
-        "Name": "MME007",
+        "Name": "MME020",
         "Folder": "2",
         "Configs": {
           "GateIsVisible": "True",
@@ -27,7 +27,7 @@
           "PlotUserQrrTq": "False",
           "RACIsVisible": "False",
           "IHIsVisible": "False",
-          "MMECode": "MME007",
+          "MMECode": "MME020",
           "ClampWithSlidingDevice": "False",
           "SLNode": "11",
           "AdapterPort": "1",
@@ -42,8 +42,8 @@
           "dVdtNode": "7",
           "SCTUReadGraph": "False",
           "NeedSCTUInitialization": "False",
-          "CentralDatabaseService": "net.tcp://192.168.0.134:730/SCME/SCME.IO.CentralDatabaseService",
-          "CentralDatabase": "net.tcp://192.168.0.134:730/SCME/CentralDatabase",
+          "CentralDatabaseService": "net.tcp://192.168.128.4:730/SCME/SCME.IO.CentralDatabaseService",
+          "CentralDatabase": "net.tcp://192.168.128.4:730/SCME/CentralDatabase",
           "Localization": "en-US"
         }
       }
