--- a/SCME.Agent/appsettings.json
+++ b/SCME.Agent/appsettings.json
@@ -1,13 +1,13 @@
 ﻿{
   "ConfigData": {
-    "ServiceAppPath": "E:\\data\\3\\SCME.Service.exe",
-    "UIAppPath": "E:\\data\\3\\UI\\SCME.UI.exe",
+    "ServiceAppPath": "C:\\Users\\evgeny\\Desktop\\Build\\UIService\\SCME.Service.exe",
+    "UIAppPath": "C:\\Users\\evgeny\\Desktop\\Build\\UIService\\UI\\SCME.UI.exe",
     "ProxyAppPath": "SCME.Proxy.exe",
     "IsProxyEnabled": "false",
     "ProxyInitDelayMs": 1000,
     "DebugUpdate": "true",
-    "UpdateServerUrl": "http://192.168.0.134:733",
+    "UpdateServerUrl": "http://192.168.128.4:731",
     "IsUserInterfaceEnabled": "true",
-    "MMECode": "MME007"
+    "MMECode": "MME020"
   }
 }
