--- a/SCME.DatabaseServer/Properties/Settings.settings
+++ b/SCME.DatabaseServer/Properties/Settings.settings
@@ -15,10 +15,10 @@
       <Value Profile="(Default)">SCME_ResultsDB</Value>
     </Setting>
     <Setting Name="DBPassword" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Hpl1520</Value>
+      <Value Profile="(Default)">Ufkfrnbrf6084</Value>
     </Setting>
     <Setting Name="DbPath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">tcp:192.168.0.134, 1444</Value>
+      <Value Profile="(Default)">192.168.128.4</Value>
     </Setting>
   </Settings>
 </SettingsFile>
