--- a/SCME.ProfileBuilder/Properties/Settings.settings
+++ b/SCME.ProfileBuilder/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">ru-RU</Value>
     </Setting>
     <Setting Name="MSSQLServer" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">IVAN-PC\SQLEXPRESS</Value>
+      <Value Profile="(Default)">192.168.128.4</Value>
     </Setting>
     <Setting Name="MSSQLIntegratedSecurity" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
@@ -20,20 +20,20 @@
     <Setting Name="IsTouch" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="LastSelectedMMECode" Type="System.String" Scope="User">
-      <Value Profile="(Default)">A</Value>
-    </Setting>
     <Setting Name="MSSQLPassword" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">qwerty_123</Value>
+      <Value Profile="(Default)">Ufkfrnbrf6084</Value>
     </Setting>
     <Setting Name="SQLiteFileName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\Ivan\Desktop\Работа\mme_software_TS05\Debug\UIService\Db\SCME_ResultsDB_Local.sqlite</Value>
+      <Value Profile="(Default)">C:\Visual Studio\mme_software\Debug\UIServiceData\SCME_ResultsDB_Local.sqlite</Value>
     </Setting>
     <Setting Name="TypeDb" Type="SCME.Types.TypeDb" Scope="Application">
       <Value Profile="(Default)">MSSQL</Value>
     </Setting>
     <Setting Name="MSSQLDatabase" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SCME_ResultsDB</Value>
+    </Setting>
+    <Setting Name="LastSelectedMMECode" Type="System.String" Scope="User">
+      <Value Profile="(Default)">MME008</Value>
     </Setting>
   </Settings>
 </SettingsFile>
