Добавление параметра IsLSL в config

--- a/SCME.MEFAServer/appsettings.json
+++ b/SCME.MEFAServer/appsettings.json
@@ -10,5 +10,5 @@
   "urls": "http://localhost:740",
   "AllowedHosts": "*",
   
-  "ConnectionString" : "Server=IVAN-PC\\SQLEXPRESS;Database=SCME_ResultsDB;User Id=sa;Password=qwerty_123"
+  "ConnectionString" : "Server=192.168.0.120\\SCME;Database=SCME_ResultsDB;User Id=sa;Password=Hpl1520"
 }
