--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -325,6 +325,9 @@
       <setting name="VGNTIsVisible" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="IsLSL" serializeAs="String">
+        <value>True</value>
+      </setting>
     </SCME.UIServiceConfig.Properties.Settings>
   </applicationSettings>
 </configuration>
