--- a/SCME.MEFAViewer/appsettings.json
+++ b/SCME.MEFAViewer/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "ConnectionString" : "Server=IVAN-PC\\SQLEXPRESS;Database=SCME_ResultsDB;User Id=sa;Password=qwerty_123"
+  "ConnectionString" : "Server=192.168.0.120\\SCME;Database=SCME_ResultsDB;User Id=sa;Password=Hpl1520"
 }
