--- a/SCME.UpdateServer/appsettings.json
+++ b/SCME.UpdateServer/appsettings.json
@@ -10,7 +10,7 @@
   "HostUrl": "http://127.0.0.1:731",
   "UpdateDataConfig": {
     "DebugParameter": "2",
-    "DataPathRoot": "C:\\SCME.ServerSofware",
+    "DataPathRoot": "C:\\SCME",
     "ScmeAgentFolderName": "Agent",
     "ScmeAgentExeName": "SCME.Agent.exe",
     "ScmeCommonConfigName": "UIService\\SCME.UIServiceConfig.dll.config",
@@ -44,7 +44,7 @@
           "NeedSCTUInitialization": "False",
           "CentralDatabaseService": "net.tcp://192.168.128.4:730/SCME/SCME.IO.CentralDatabaseService",
           "CentralDatabase": "net.tcp://192.168.128.4:730/SCME/CentralDatabase",
-          "Localization": "en-US"
+          "Localization": "ru-RU"
         }
       }
     ]
