--- a/SCME.MEFAServer/appsettings.json
+++ b/SCME.MEFAServer/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
 
-  "urls": "http://localhost:740",
+  "urls": "http://127.0.0.1:740",
   "AllowedHosts": "*",
   
-  "ConnectionString" : "Server=192.168.0.120\\SCME;Database=SCME_ResultsDB;User Id=sa;Password=Hpl1520"
+  "ConnectionString" : "Server=192.168.128.4;Database=SCME_ResultsDB;User Id=sa;Password=Ufkfrnbrf6084"
 }
