--- a/SCME.MEFAViewer/SCME.MEFAViewer.csproj
+++ b/SCME.MEFAViewer/SCME.MEFAViewer.csproj
@@ -22,4 +22,6 @@
       <ProjectReference Include="..\SCME.MEFADB\SCME.MEFADB.csproj" />
     </ItemGroup>
 
+    <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
