--- a/SCME.MEFAViewer/appsettings.json
+++ b/SCME.MEFAViewer/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "ConnectionString" : "Server=192.168.0.120\\SCME;Database=SCME_ResultsDB;User Id=sa;Password=Hpl1520"
+  "ConnectionString" : "Server=192.168.128.4;Database=SCME_ResultsDB;User Id=sa;Password=Ufkfrnbrf6084"
 }
