Выбор типа модуля

--- a/SCME.UIServiceConfig/App.config
+++ b/SCME.UIServiceConfig/App.config
@@ -314,7 +314,7 @@
         <value>False</value>
       </setting>
       <setting name="ClampingSystemType" serializeAs="String">
-        <value>kN100</value>
+        <value>Presspack</value>
       </setting>
       <setting name="MEFAUri" serializeAs="String">
         <value>http://127.0.0.1:740</value>
