--- a/SCME.UIServiceConfig/Properties/Settings.settings
+++ b/SCME.UIServiceConfig/Properties/Settings.settings
@@ -315,7 +315,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ClampingSystemType" Type="SCME.Types.Clamping.ClampingSystemType" Scope="Application">
-      <Value Profile="(Default)">kN100</Value>
+      <Value Profile="(Default)">Presspack</Value>
     </Setting>
     <Setting Name="MEFAUri" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://127.0.0.1:740</Value>
